src/main/kubernetes/namespace.yml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "jenkins",
    "labels": {
      "name": "jenkins"
    }
  }
}
